--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471883-senior-product-designer'>SmartRecruiters Inc Senior Product Designer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Berlin, Germany</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472081-product-manager-api-platform'>SmartRecruiters Inc Product Manager - API Platform | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/sugarcrm/job/ocBnbfw5'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
@@ -319,7 +327,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -375,12 +383,12 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kyivstar/83d88d60-d97a-44cd-9ca5-47b61ed299ac/'>Kyivstar - Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/83d88d60-d97a-44cd-9ca5-47b61ed299ac/'>Kyivstar - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>18 ???. 2019 ... By clicking on "Apply for this job", you confirm that you have read, understood 
 and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</p>
 <hr/>
-<h5><a href='http://resynetworkinc.applytojob.com/apply/oiRm8FFeTD/Product-Manager-Resy-Global-Service'>Product Manager - Resy Global Service - Resy Network Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://resynetworkinc.applytojob.com/apply/oiRm8FFeTD/Product-Manager-Resy-Global-Service'>Product Manager - Resy Global Service - Resy Network Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY     New York City</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -388,7 +396,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698375427-senior-product-manager-growth-m-f-d-'>Omio Senior Product Manager Growth (m / f / d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698375427-senior-product-manager-growth-m-f-d-'>Omio Senior Product Manager Growth (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -440,16 +448,8 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">Delhi/NCR, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vroom/24f8e9a6-3f93-4b93-9e64-c9ee15e214ba'>Vroom - Sr. Product Manager (Data & API Platforms)</a></h5> 
+<h5><a href='https://jobs.lever.co/vroom/24f8e9a6-3f93-4b93-9e64-c9ee15e214ba'>Vroom - Sr. Product Manager (Data & API Platforms)</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://studygroupuk.applytojob.com/apply/hhpMyngAjj/Online-Learning-Product-Manager'>Online Learning Product Manager - Study Group - Career Page</a></h5> 
-<p><span class="badge badge-light">North America</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/sofi/job/oVgrbfwx'>SoFi Careers - Staff Product Designer</a></h5> 
-<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
