Job Profile - Senior UI Consultant. Job Opening ASP.net CORE MVC-Kendo UI, Developer -Dubai Location, (4 - 9 yrs.), Dubai - United Arab Emirates | ??????. McFadyen Digital UI Architect | SmartRecruiters. UX/UI Designer - Mavis.  Splash Damage Careers - UI Programmer.       UX/UI Designer (f/m/d) - zenloop GmbH     .       UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs   . Ubisoft UI programmer (H/F) | SmartRecruiters. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN. BuzzClan LLC Senior System Architect with Pega  UI | SmartRecruiters. Orion Advisor Solutions Careers - UI/UX Designer. Job Application for Senior UI/Visual Designer, Product (f/m/d) at BLACKLANE. TALENT ACQUISITION CONSULTANT / SOURCING SPECIALIST - The Federal Reserve System Careers. Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN. ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters. ClientSolv Technologies UI/UX | SmartRecruiters. Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page. Magnum Steel Works, Inc. HEAVY EQUIPMENT MECHANICS - 2nd Shift (4-10-hr shifts with a 4-day weekend every other weekend) | SmartRecruiters. Postdoctoral in the field of natural sciences, field of biology, to work on HRZZ NZZ establishment project UIP-2017-05-5635 "Microbiome of loggerhead turtle (Caretta caretta): insight into episodic and endozoic communities (TurtleBIOME)" | EURAXESS. Job @ Coachhub (Berlin): UI/UX Designer – Mobile &... | JOIN. ServiceNow Careers - UI Architect, Platform. lm group UX/UI Designer | SmartRecruiters. UI Developer #0671 job at Radiant Digital in Temple Terrace, FL, powered by JobScore. Stellenangebot: UI/UX Designer (m/f/x) (Berlin) – dasauge® Stellenmarkt. Senior HR Coordinator - Advertising job with BIS RECRUIT | Guardian Jobs. Cermati.com UI/UX Designer | Smar

--- a/ui.html
+++ b/ui.html
@@ -45,14 +45,14 @@
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://ashabakah.com/feeds/web/en/jobs/view/683310'>Job Opening ASP.net CORE MVC-Kendo UI, Developer -Dubai Location, (4 - 9 yrs.), Dubai - United Arab Emirates | ??????</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Dubai Dubai Dubai</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698472792-ui-architect'>McFadyen Digital UI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Karnataka, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
+<h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698449101-ui-programmer-h-f-'>Ubisoft UI programmer (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698449101-ui-programmer-h-f-'>Ubisoft UI programmer (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/talent-acquisition-consultant-sourcing-specialist-10322'>TALENT ACQUISITION CONSULTANT / SOURCING SPECIALIST - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/talent-acquisition-consultant-sourcing-specialist-10322'>TALENT ACQUISITION CONSULTANT / SOURCING SPECIALIST - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -128,7 +128,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6990165/senior-hr-coordinator-advertising/?TrackID=15'>Senior HR Coordinator - Advertising job with BIS RECRUIT | Guardian Jobs</a></h5> 
+<h5><a href='https://jobs.theguardian.com/job/6990165/senior-hr-coordinator-advertising/?TrackID=15'>Senior HR Coordinator - Advertising job with BIS RECRUIT | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -164,7 +164,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -202,7 +202,7 @@
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -262,7 +262,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -329,7 +329,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
+<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -375,7 +375,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -399,7 +399,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SanaCommerce/743999698119610-ui-designer'>Sana Commerce UI Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SanaCommerce/743999698119610-ui-designer'>Sana Commerce UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Colombo, Sri Lanka  Australia Colombo, Sri Lanka</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -407,7 +407,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oU5l9fwd&__jvst=Employee&__jvsd=skusIhwK&__jvsc=Twitter&bid=nDBqlMwg'> Splash Damage Careers - UI Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oU5l9fwd&__jvst=Employee&__jvsd=skusIhwK&__jvsc=Twitter&bid=nDBqlMwg'> Splash Damage Careers - UI Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -449,11 +449,11 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqdQafwn&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nQUjlMwF'>ServiceNow Careers - Senior Front End Software Engineer - UI/UX Platform Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqdQafwn&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nQUjlMwF'>ServiceNow Careers - Senior Front End Software Engineer - UI/UX Platform Engineering</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hulldailymail.co.uk/news/jobs/tui-hiring-hull-discount-holidays-3469937'>TUI is hiring in Hull and you will get generous discounts on holidays - Hull Live</a></h5> 
+<h5><a href='https://www.hulldailymail.co.uk/news/jobs/tui-hiring-hull-discount-holidays-3469937'>TUI is hiring in Hull and you will get generous discounts on holidays - Hull Live</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
