Security Engineers (Aberdeen &amp; Dundee) | McGill. Ubisoft Information Security Analyst (f/m/d) | SmartRecruiters. MindPoint Group, LLC Security Engineer | SmartRecruiters. MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters. Imperva Careers - Cloud Security Engineer, Managed Services. Job Application for Senior Security Engineer, Abuse at GitLab. CrowdStrike Careers - Security Analyst, Falcon Complete. Imperva Careers - Network Security Engineer. Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required). Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required). Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required). Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required). Security Analyst, Assurance | Okta. GuidePoint Security Careers - Senior Cloud Security Architect. Glidewell Dental Careers - Sr. Security Engineer. Obsidian Security, Inc. - Senior Customer Success Engineer. SECURITY SYS ANALYST. CompuGain Solutions Sr Security Analyst | SmartRecruiters. Cloud Security Engineer / Architect - West 4th Strategy - Career Page. Security Automation Engineer - Acrisure LLC - Career Page. Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters. K2 Group, Inc. Careers - Information Assurance (IA) System Security Engineer I. AthenPollo LLC Sr Cyber Security Analyst | SmartRecruiters. AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters. SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders. Job Application for Mid Cyber Security Engineer at XOR Security. Sr. Security Engineer (Symantec / Blue Coat ProxySG) - WaveStrong. Security Engineer - Blue Team - Zup Innovation. WP Engine Careers - Senior Security Engineer. Very Good Security - Junior Software Engineer. Very Good Security - Senior Backend Engineer. Very Good Security - Frontend Engineer. Very Good Security - Backend Engineer. Job Application for Security Operations Engineer at Grindr.

--- a/security.html
+++ b/security.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">Plano, TX Arlington, VA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/prominentedge/16b6fd2c-8960-4f22-b577-ccf83d0c13d6'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/16b6fd2c-8960-4f22-b577-ccf83d0c13d6'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p>4 days ago ... Description. Exciting Sr. Security Engineer (Symantec / Blue Coat ProxySG), 12 
 months contract Bloomington, IL. Requirements. Primary responsibilities will?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>16 Out 2019 ... Quem somos?A Zup desenvolve produtos digitais disruptivos que impactam a 
 vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
@@ -201,11 +201,11 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692873355-security-analyst'>Colliers Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692873355-security-analyst'>Colliers Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -363,7 +363,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Singapore, Singapore Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/accurx/jobs/4489234002'>Job Application for Senior Security Engineer at AccuRx</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/accurx/jobs/4489234002'>Job Application for Senior Security Engineer at AccuRx</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -380,7 +380,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p>Oct 12, 2019 ... Provides the framework, processes and execution to ensure support of Jamfs 
 data leakage prevention; Responsible for Web application firewall and related?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shapesecurity/11737206-b5c2-4ffa-8ceb-8fd4c083473c'>Shape Security - Data Scientist/Analyst Santa Clara</a></h5> 
+<h5><a href='https://jobs.lever.co/shapesecurity/11737206-b5c2-4ffa-8ceb-8fd4c083473c'>Shape Security - Data Scientist/Analyst Santa Clara</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -408,7 +408,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/flexport/jobs/1918570'>Job Application for Senior Security Engineer, Enterprise Infrastructure at Flexport</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flexport/jobs/1918570'>Job Application for Senior Security Engineer, Enterprise Infrastructure at Flexport</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
